--- a/hobbies.html
+++ b/hobbies.html
@@ -5,7 +5,7 @@
    <title>My Hobbies</title>
   </head>
   <body>
-    <<h3></h3>>My Hobbies</h3>
+    <h3>My Hobbies</h3>
     <ol>
       <li>Gardening</li>
       <li><a href="https://www.alltrails.com/">Hiking</a></li>
